User can CRUD a Reminder inside a Project
Adaptation and creation of new versions of the activities of the Reminder for the Project requirements