@@ -1,5 +1,6 @@
 package com.example.uninote.fragments;
 
+import android.content.Intent;
 import android.os.Bundle;
 
 import androidx.annotation.NonNull;
@@ -17,6 +18,8 @@ import com.example.uninote.R;
 import com.example.uninote.reminder.ReminderAdapter;
 import com.example.uninote.models.Project;
 import com.example.uninote.models.Reminder;
+import com.example.uninote.reminder.ReminderDetailProject;
+import com.example.uninote.toDo.ToDoDetailProject;
 import com.parse.FindCallback;
 import com.parse.ParseException;
 import com.parse.ParseObject;
@@ -24,6 +27,7 @@ import com.parse.ParseQuery;
 import com.parse.ParseUser;
 
 import org.jetbrains.annotations.NotNull;
+import org.parceler.Parcels;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -51,18 +55,19 @@ public class ReminderProjectFragment extends ReminderFragment {
     public void onViewCreated(@NonNull @NotNull View view, @Nullable Bundle savedInstanceState) {
         super.onViewCreated(view, savedInstanceState);
 
-        final boolean typeOfLecture = viewType();
+        final boolean userType = viewType();
+
         btnAdd = view.findViewById(R.id.btnAdd);
+        if (!userType) {
+            btnAdd.setVisibility(View.GONE);
+        }
+
         rvReminders = view.findViewById(R.id.rvReminders);
         allReminders = new ArrayList<>();
-        adapter = new ReminderAdapter(getContext(), allReminders, typeOfLecture);
+        adapter = new ReminderAdapter(getContext(), allReminders, userType, getArguments().getParcelable("code"));
         rvReminders.setAdapter(adapter);
         mLayoutManager = new LinearLayoutManager(getContext());
         rvReminders.setLayoutManager(mLayoutManager);
-
-        if (!typeOfLecture) {
-            btnAdd.setVisibility(View.GONE);
-        }
 
         swipeContainer = (SwipeRefreshLayout) view.findViewById(R.id.swipeContent);
 
@@ -74,12 +79,22 @@ public class ReminderProjectFragment extends ReminderFragment {
                 swipeContainer.setRefreshing(false);
             }
         });
+
+        btnAdd.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                final Project project = getArguments().getParcelable("code");
+                final Intent intent = new Intent(getContext(), ReminderDetailProject.class);
+                intent.putExtra(Project.class.getSimpleName(), Parcels.wrap(project));
+                getContext().startActivity(intent);
+            }
+        });
+
         queryReminders();
     }
 
     private boolean viewType() {
         final Project project = getArguments().getParcelable("code");
-        final boolean[] type = new boolean[1];
 
         final ParseQuery<ParseUser> innerQueryOne = ParseQuery.getQuery("_User");
         innerQueryOne.whereEqualTo("objectId", ParseUser.getCurrentUser().getObjectId());
@@ -90,13 +105,13 @@ public class ReminderProjectFragment extends ReminderFragment {
         query.whereMatchesQuery("username", innerQueryOne);
         query.whereMatchesQuery("project", innerQueryTwo);
 
-        query.findInBackground(new FindCallback<ParseObject>() {
-            @Override
-            public void done(List<ParseObject> reminders, ParseException e) {
-                type[0] = reminders.get(0).getBoolean("type");
-            }
-        });
-        return type[0];
+        try {
+            ParseObject object = query.getFirst();
+            return object.getBoolean("type");
+        } catch (ParseException e) {
+            e.printStackTrace();
+        }
+        return false;
     }
 
     private void queryReminders() {
